crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badVariants.usdc
version https://git-lfs.github.com/spec/v1
oid sha256:bbf3a651159096513828ebf6ea7cb57f1ba52320a83aa0be25729a5b1057bff7
size 1177
